# 30min-of-deep-learning

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  environment_linux.yml  pyproject.toml  requirements.txt  requirements_uv.txt  ruff.toml  setup_conda_env.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ENVIRONMENT_TASK.md  SECTION_TASK.md
.github/workflows/: lint.yml
00_Prelude/: Virtual_Environments.ipynb  index.ipynb
00_Prelude/conda_sample/: requirements.txt
01_Density_Estimation/: index.ipynb
02_Linear_Regression/: index.ipynb
03_Generative_Discriminative_Classifier/: index.ipynb
04_Multilayer_Perceptrons/: index.ipynb
05_Gradient_Descent_Backprop/: index.ipynb
05a_Optimization-Gradient_Descent_Autograd/: index.ipynb
05b_Optimization-Deep_Network_Techniques/: index.ipynb
06_Regularization/: index.ipynb
06_Regularization_And_Normalization/: .gitignore  index.ipynb
07_Convolutional_Neural_Networks/: index.ipynb
08_Object_Detection_And_Segmentation/: .gitignore  index.ipynb
09_Style_Transfer/: index.ipynb
10_Graphical_And_Sequential_Models/: index.ipynb  planned_contents.md
11_Transformers/: index.ipynb  planned_contents.md
12_Graph_Neural_Networks/: index.ipynb
13_Sampling_Algorithms/: index.ipynb
14_Clustering/: index.ipynb
15_Principal_Component_Analysis/: index.ipynb
16_EM_Algorithm/: index.ipynb
17_Generative_Adversiral_Network/: index.ipynb
18_Autoencoders/: index.ipynb
19_Diffusion/: index.ipynb
scripts/: utils.py
