[project]
name = "30min-of-deep-learning"
version = "0.1.0"
description = "30 Minutes of Deep Learning"
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
    "jupyterlab==4.4.0",
    "jupytext==1.17.0",
    "notebook==7.4.0",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "seaborn==0.13.2",
    "diffusers==0.33.1",
    "transformers==4.51.3",
    "tqdm==4.67.1",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[dependency-groups]
dev = [
    "mypy==1.15.0",
    "ruff==0.11.5",
    "nbqa==1.9.1",
    "pre-commit==4.2.0",
    "nbdime==4.0.2",
]
